--- a/css/main.css
+++ b/css/main.css
@@ -465,7 +465,7 @@ section {
 .newsletter {
   padding: 16rem 2rem;
   text-align: center;
-  background: url(../../image/20548050.jpg) no-repeat;
+  background: url(../image/20548050.jpg) no-repeat;
   background-position: center;
   background-size: cover;
   position: relative;
