--- a/sass/layouts/_index.scss
+++ b/sass/layouts/_index.scss
@@ -324,7 +324,7 @@
 .newsletter {
    padding: 16rem 2rem;
    text-align: center;
-   background: url(../../image/20548050.jpg) no-repeat;
+   background: url(../image/20548050.jpg) no-repeat;
    background-position: center;
    background-size: cover;
    position: relative;
@@ -338,7 +338,7 @@
       width: 100%;
       height: 100%;
       background: #00000079;
-      z-index: -4;
+      z-index: 4;
    }
 
    h3 {
